--- a/src/components/MainScreen/MainScreen.module.scss
+++ b/src/components/MainScreen/MainScreen.module.scss
@@ -11,18 +11,16 @@
   display: flex;
   row-gap: 1.5rem;
   flex-direction: column;
-
-}
-
-.joke-text {
-  font-style: italic;
-  margin: 0;
-  padding: 0;
-  text-align: left;
 }
 
 .joke {
   display: flex;
   align-items: center;
   min-height: 3em;
+  &-text {
+    font-style: italic;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+  }
 }
