added option for saving jokes

--- a/src/assets/sass/_buttons.scss
+++ b/src/assets/sass/_buttons.scss
@@ -5,6 +5,8 @@
   padding: 1em;
   transition-duration: 0.4s;
   font-weight: 600;
+  display: flex;
+  justify-content: center;
 
   &:hover:enabled {
     filter: brightness(80%);
