--- a/src/components/MainScreen/MainScreen.module.scss
+++ b/src/components/MainScreen/MainScreen.module.scss
@@ -7,10 +7,14 @@
   width: 100%;
   box-shadow: rgba(150, 150, 150, 0.19) 0px 3px 10px;
 
-  padding: 1.5rem;
+  padding: 1rem;
   display: flex;
-  row-gap: 1.5rem;
+  row-gap: 1rem;
   flex-direction: column;
+  @include sm {
+    padding: 1.5rem;
+    row-gap: 1.5rem;
+  }
 }
 
 .joke {
