--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,10 @@
+@import "/src/assets/sass/index";
+
 .app {
   display: flex;
   align-items: center;
   justify-content: center;
 
-  padding: 1em;
+  height: 100%;
+  width: 100%;
 }
