--- a/src/assets/sass/_buttons.scss
+++ b/src/assets/sass/_buttons.scss
@@ -7,6 +7,7 @@
   font-weight: 600;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   &:hover:enabled {
     filter: brightness(80%);
