--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -2,6 +2,11 @@
 @import "buttons";
 @import "mixins";
 
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 html,
 body {
   margin: 0;
@@ -11,12 +16,12 @@ body {
   font-weight: 600;
   color: $color-dark;
   font-size: 0.95em;
-  
+
+  width: 100%;
+  height: 100%;
+
   @include sm {
     font-size: 1em;
+    background-color: $color-light-gray;
   }
-
-  background-color: $color-light-gray;
-
 }
-
